# pachner-graph-triangulations

./: .gitignore  CONTRIBUTING.md  README.md  data  debug.txt  logbook.md  pyproject.toml
.github/workflows/: compile_latex.yaml
experiments/configs/classification/: lr_0.00003.yaml  lr_0.0001.yaml  lr_0.0003.yaml  lr_0.006.yaml
experiments/configs/scalar_regression/: count_1_deg.yaml  count_2_deg.yaml  count_3_deg.yaml  count_4_deg.yaml  count_5_deg.yaml  det_alexander.yaml  edge_degree_variance.yaml  loop_count.yaml
experiments/nci_shell/: commands.sh  main_train.sh  test.sh  train_test.sh
experiments/notebooks/: 01_analyse_direct_accent.ipynb  01_train_sgd.ipynb  02_analyse_mcmc.ipynb  02_analyse_mcmc_sim.ipynb  02_analyse_sim.ipynb  03_analyse_sgd.ipynb  03_manifold_diff_sgd.ipynb  03_sgd_progress.ipynb  06_analys_knots.ipynb
experiments/notebooks/data_gen/: ascend_gen.ipynb  baseline.ipynb  extract_data.ipynb  manifold_gen.ipynb  scalar_obj.ipynb
experiments/scripts/: duncehat_search.py  encode_to_npy.py  gen_data.py  run_direct_accent.py  run_mcmc.py  run_sim_annealing.py  sample_discrete_dit.py  sample_latent_dit.py  train_discrete_dit.py  train_dit.py  train_graphomer.py  train_latent_dit.py  train_sgd.py  unknotted_dmt_search.py
experiments/scripts/data_generation/: baseline.py  fix_samples.py  gen_data.py  gen_data_and_score.py  gen_data_efficient.py  score_data.py
experiments/scripts/optimisation/: all_knotted_random_search.py  direct_accent.py  sim_annealing.py
experiments/scripts/triangulation_complexity/: duncehat_search.py  unknotted_dmt_search.py
presentation/: main.tex  ref.bib
src/pachner_graph_triangulations/: functions3d.py
src/pachner_traversal/: data.py  data_io.py  data_io_dehydration.py  direct_ascent.py  dit.py  dit_discrete.py  dmt.py  functions3d.py  glue_encoding.py  graphomer.py  mcmc.py  potential_functions.py  reinforcement.py  simulated_annealing.py  transformer.py  transformer_training.py  types.py  utils.py
thesis/: main.tex  old_main.tex  references.bib  usydthesis.cls
(+230 files in other folders)
