[project]
name = "pachner_traversal"
version = "0.1.0"
description = "Honours project: Navigating the Pachner Graph: Algorithms for Searching and Sampling Triangulations"
authors = [
    { name = "Daniel Bruwel", email = "d.bruwel@maths.usyd.edu.au" }
]
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["pandas (>=2.3.2,<3.0.0)", "regina (>=7.0)", "snappy (>=3.2,<4.0)", "h5py (>=3.14.0,<4.0.0)"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"pachner_traversal" = ["stylelib/*.mplstyle"]

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
